--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 <body>
     <!-- Login Screen -->
     <div class="login-screen" id="loginScreen">
-        <h1>🎰 Dragon Slots 🎰</h1>
+        <h1>🎰 Your Way to a Gazillion Dollars! 🎰</h1>
         <h2>Your Way to a Gazillion Dollars!</h2>
         <div style="margin: 30px 0;">
             <input type="password" id="passwordInput" placeholder="Passwort eingeben" maxlength="20">
@@ -376,7 +376,7 @@
  
         const BET_AMOUNT = 10;
         const START_BALANCE = 500;
-        const CORRECT_PASSWORD = "gamble4live"; // Ändere das Passwort hier
+        const CORRECT_PASSWORD = "gamble4life"; // Ändere das Passwort hier
  
         const JACKPOT_PAYOUTS = {
             'sieben': 1000,
