--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         </div>
  
         <div class="payouts">
-            <h3>💰 Auszahlungstabelle</h3>
+            <h3>💰 Auszahlungstabelle für große Gewinne</h3>
             <div class="payout-row">
                 <span>5x Sieben (7️⃣)</span>
                 <span style="color: #ffd700;">1000 Coins</span>
