--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
  
     <!-- Game Screen -->
     <div class="game-container" id="gameContainer">
-        <h1 class="game-title"> Your Way to a Gazillion Dollars! </h1>
+        <h1 class="game-title">🐉 Your Way to a Gazillion Dollars! 🐉</h1>
         
         <div class="slot-machine">
             <div class="reels-container" id="reelsContainer">
@@ -454,7 +454,7 @@
  
             <div class="info-panel">
                 <div class="info-item">
-                    <div class="coin">🪙 Coins </div>
+                    <div class="coin">🪙 Coins</div>
                     <div class="balance" id="balance">500</div>
                 </div>
                 <div class="info-item">
@@ -535,7 +535,7 @@
         const BET_MIN = 10;
         const BET_MAX = 250;
         const START_BALANCE = 500;
-        const CORRECT_PASSWORD = "gamble4life";
+        const CORRECT_PASSWORD = "gamble4life"; // Ändere das Passwort hier
  
         const JACKPOT_PAYOUTS = {
             'sieben': 1000,
@@ -587,8 +587,10 @@
 
         // Show game screen
         function showGameScreen() {
+            // Hide ALL other screens
             document.getElementById('loginScreen').style.display = 'none';
             document.getElementById('cashoutScreen').style.display = 'none';
+            document.getElementById('gameoverScreen').style.display = 'none';
             document.getElementById('gameContainer').style.display = 'block';
             initializeGame();
         }
@@ -597,12 +599,12 @@
         function showGameoverScreen(finalBalance) {
             document.getElementById('gameContainer').style.display = 'none';
             document.getElementById('gameoverScreen').style.display = 'block';
-            document.getElementById('gameoverAmount').textContent = `${finalBalance} Coins`;
+            document.getElementById('gameoverAmount').textContent = `${finalBalance} Drachencoins`;
         }
         function showCashoutScreen(finalBalance) {
             document.getElementById('gameContainer').style.display = 'none';
             document.getElementById('cashoutScreen').style.display = 'block';
-            document.getElementById('finalAmount').textContent = `${finalBalance} Coins`;
+            document.getElementById('finalAmount').textContent = `${finalBalance} Drachencoins`;
         }
 
         // Play again function
@@ -861,46 +863,6 @@
  
             // Update win history
             winHistory.push(hasWon);
-            if (winHistory.length > 3) {
-                winHistory.shift();
-            }
- 
-            // Check for multiplier activation
-            if (winHistory.length >= 2) {
-                const lastTwoWins = winHistory[winHistory.length - 1] && winHistory[winHistory.length - 2];
-                if (lastTwoWins && !multiplierReady) {
-                    multiplierReady = true;
-                }
-            }
- 
-            let finalWin = winAmount;
-            let message = '';
-            let messageColor = '#ffff44';
- 
-            if (multiplierReady && hasWon) {
-                finalWin *= 2;
-                multiplierReady = false;
-                message = `🔥 JACKPOT BONUS! ${finalWin} Coins! 🔥`;
-                messageColor = '#00ff00';
-            } else if (hasWon) {
-                message = `💰 Gewinn: ${winAmount} Coins! 💰`;
-                messageColor = '#ffff44';
-            } else {
-                message = '🎯 Kein Gewinn - Nächster Versuch! 🎯';
-                messageColor = '#ff8844';
-            }
- 
-            balance += finalWin;
-            updateDisplay();
-            showMessage(message, messageColor);
-        }
- 
-        // Show message
-        function showMessage(text, color) {
-            const messageEl = document.getElementById('message');
-            messageEl.textContent = text;
-            messageEl.style.color = color;
-        }
-    </script>
+
 </body>
-</html>
+                                                       </html>
