--- a/index.html
+++ b/index.html
@@ -574,6 +574,14 @@
         let passwordEntered = false;
  
         // Password Check
+        document.addEventListener('DOMContentLoaded', function() {
+            document.getElementById('passwordInput').addEventListener('keypress', function(e) {
+                if (e.key === 'Enter') {
+                    checkPassword();
+                }
+            });
+        });
+
         function checkPassword() {
             const input = document.getElementById('passwordInput').value;
             if (input === CORRECT_PASSWORD) {
@@ -667,11 +675,6 @@
             decreaseBtn.disabled = (betAmount <= BET_MIN);
             increaseBtn.disabled = (betAmount >= BET_MAX);
         }
-        document.getElementById('passwordInput').addEventListener('keypress', function(e) {
-            if (e.key === 'Enter') {
-                checkPassword();
-            }
-        });
 
         // Auszahlung & Spielende
         function cashOut() {
@@ -727,6 +730,13 @@
             } else {
                 bonusIndicator.style.display = 'none';
             }
+        }
+
+        // Show message
+        function showMessage(text, color = '#ffffff') {
+            const messageElement = document.getElementById('message');
+            messageElement.textContent = text;
+            messageElement.style.color = color;
         }
  
         // Spin function
@@ -864,5 +874,15 @@
             // Update win history
             winHistory.push(hasWon);
 
+            if (hasWon) {
+                balance += winAmount;
+                showMessage(`Gewonnen! ${winAmount} Coins!`, '#00ff00');
+            } else {
+                showMessage('Versuche es nochmal!', '#ffaa00');
+            }
+
+            updateDisplay();
+        }
+    </script>
 </body>
-                                                       </html>
+</html>
