--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         </div>
  
         <div class="payouts">
-            <h3>💰 Auszahlungstabelle (bei 10 Coin Einsatz)</h3>
+            <h3>💰 Auszahlungstabelle </h3>
             <div class="payout-row">
                 <span>5x Sieben (7️⃣)</span>
                 <span style="color: #ffd700;" id="payout-sieben">1000 Coins</span>
